# Horosa-Web-App-comprehensively-improved-MacOS

./: CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_ZH.md  CONTRIBUTING.md  CONTRIBUTING_ZH.md  Horosa_Local.command  Horosa_OneClick_Mac.command  Horosa_SelfCheck_Mac.command  LICENSE  Prepare_Runtime_Mac.command  README.md  README_EN.md  README_ZH.md  SECURITY.md  SECURITY_ZH.md  SUPPORT.md  SUPPORT_ZH.md  THIRD_PARTY_NOTICES.md  WINDOWS_AGPL_SYNC_GUIDE.md
.github/: PULL_REQUEST_TEMPLATE.md
Horosa-Web/: start_horosa_local.sh  stop_horosa_local.sh  verify_horosa_local.sh
Horosa_Desktop_Installer/: INCREMENTAL_UPDATE_SOP.md  README.md  UNINSTALL.md  package-lock.json  package.json
Horosa_Desktop_Installer/src-tauri/: Cargo.toml  tauri.conf.json
Horosa_Desktop_Installer/src-tauri/icons/: icon.icns
Horosa_Desktop_Installer/src-tauri/src/: main.rs
diagnostics/: README.md
docs/: AI挂载-全技法设置完整schema-工程师方案.md  AI挂载-多时段与日期优雅化-实现方案.md  AI挂载-每技法设置与内容勾选-实现方案.md  AI挂载-缺漏汇总-本轮审计.md  acg-map-地理占星.md  ai-analysis-comprehensive-enhancements-v3.md  ai-analysis-context-and-markdown.md  ai-export-mount-completeness-and-analysis-enhancements.md  ai-model-selection-fix.md  ai-page-hardening-v2.1.5.md  ai-provider-compat-and-error-surfacing.md  ai-report-feature-v1.md  arm64-native-libs-hardening.md  bazi-month-pillar-boundary-fix.md  bazi-time-display-fix.md  (+31 more)
modules/fengshui/naqi/naqi-tauri/src-tauri/: Cargo.toml  tauri.conf.json
modules/fengshui/naqi/naqi-tauri/src-tauri/icons/: icon.icns
modules/fengshui/naqi/naqi-tauri/src-tauri/src/: main.rs
(+2344 files in other folders)
