[package]
name = "naqi-tauri"
version = "0.1.0"
description = "荀爽纳气风水可视化辅助盘"
authors = ["horacedong"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
